Fix navbar so it collapses properly

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -364,7 +364,8 @@ footer
 move-side:hover
   cursor: pointer
 
-
+.navbar-collapse.in .top-logout-btn
+  margin: 8px 0px
 .top-logout-btn
   margin-top: 8px
 
